HTML/CSS: Actualizei os artigos 'Ajuda' e 'Sobre'/Substitui a metapropriedade 'background' com valor de cor por 'background-color'.

--- a/index.html
+++ b/index.html
@@ -7450,7 +7450,7 @@
                 <p>O <strong>Requisição/Balancete</strong> é um serviço online gratuito que auxilia na elaboração, como o nome sugere, da requisição/balancete, por meio do <strong>cálculo automático do Stock Teórico Fim do Período, Diferença entre stock teórico e stock físico e Quantidade a Requisitar</strong> com base nos dados de controlo da ficha de stock e inventário preenchidos pelo usuário. Foi criado de acordo com o modelo da ficha de requisição/balancete actualmente vigente no Serviço Nacional de Saúde em Moçambique.</p>
                 <h3 class="artigo__titulo artigo__titulo--nivel-2">Objectivos</h3>
                 <ul class="artigo__lista artigo__lista--ul">
-                    <li>Auxiliar os Profissionais de Saúde no cálculo do Stock Teórico Fim do Período, Diferença entre stock teórico e stock físico e Quantidade a Requisitar com exatidão e prontidão;</li>
+                    <li>Auxiliar os profissionais de saúde no cálculo do Stock Teórico Fim do Período, Diferença entre stock teórico e stock físico e Quantidade a Requisitar com exatidão e prontidão;</li>
                     <li>Expandir o acesso à ficha de requsição/balancete.</li>
                 </ul>
                 <h3 class="artigo__titulo artigo__titulo--nivel-2 ">O que eu preciso dispor para, e como utilizar o totalizador?</h3>
@@ -7534,7 +7534,7 @@
                     <summary class="details__summary">Algumas células ficaram vermelhas</summary>
                     <p>Uma célula adopta um fundo vermelho como sinal de alerta para indicar que o valor contido nela, excedeu a largura fixa da célula e, por isso, os últimos algarismos estão omissos, ou seja, estão fora da área visível da célula.</p>
                 </details>
-                <p class="artigo-ajuda__p--contactar-suporte">Se os tópicos acima não cobrem as suas dúvidas, pode ainda solicitar suporte ao Desenvolvedor através do endereço electrónico <a href="mailto:quinamine.aderitofelix@gmail.com?subject=Requisição%2FBalancete">quinamine.aderitofelix@gmail.com</a> ou pelo <a href="https://wa.me/258846709901/?text=Olá%2C+Quinamine!+Sobre+o+*Requisição%2FBalancete*%2C+tenho+a+seguinte+dúvida%3A%20">WhatsApp</a>.</p>
+                <p class="artigo-ajuda__p--contactar-suporte">Se os tópicos acima não cobrem as suas dúvidas, pode ainda solicitar suporte ao desenvolvedor através do endereço electrónico <a href="mailto:quinamine.aderitofelix@gmail.com?subject=Requisição%2FBalancete">quinamine.aderitofelix@gmail.com</a> ou pelo <a href="https://wa.me/258846709901/?text=Olá%2C+Quinamine!+Sobre+o+*Requisição%2FBalancete*%2C+tenho+a+seguinte+dúvida%3A%20">WhatsApp</a>.</p>
                 <button class="artigo__btn-x artigo__btn-x--fechar-ajuda" title="Fechar">&times;</button>
             </article>
         </section>
