--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
         </div>
         <div class="topo-info --no-print">
             <div class="topo-info__row">
-                <a href=https://quinamine.github.io/aderito-felix-quinamine/paginas/portfolio.html class="topo-info__link info-content info-content--no-shadow">Neste link estão todos os totalizadores de resumos mensais e trimestrais. <span class="topo-info__link__trecho-acessar">Acessar&nbsp;&raquo;<span></a></a>
+                <a href=https://quinamine.github.io/aderito-felix-quinamine/paginas/portfolio.html class="topo-info__link info-content info-content--no-shadow"><span class="--hide-on-mobile">Clique</span><span class="--hide-on-desktop">Toque</span> aqui para <span class="topo-info__link__trecho-acessar --cursor-pointer">acessar</span> mais totalizadores de resumos mensais e/ou trimestrais.</a>
                 <button class="topo-info__btn" title="Fechar">&times;</button>
             </div>
         </div>
@@ -78,7 +78,7 @@
                     </ul>
 					<div class="tooltip tooltip--menu-ajuda --on">
                         <div class="tooltip__arrow tooltip__arrow--menu-ajuda"></div>
-                        <p class="tooltip__tip">Acesse este artigo para saber mais sobre as funcionalidades do totalizador<span class="--hide-on-mobile">, inclusive "<b>Salvar a ficha como PDF</b>"</span>.</p>
+                        <p class="tooltip__tip"><span class="--hide-on-mobile">Clique</span><span class="--hide-on-desktop">Toque</span> aqui para saber mais sobre as funcionalidades do totalizador.</p>
                     </div>
                 </div>
             </div>
@@ -415,6 +415,31 @@
                             <!-- Quantidade autorizada -->
                             <input type="number" min="0" />
                         </div>
+                        
+                        <div class="ficha__linha-de-inputs">
+                            <input type="text" placeholder="FNM" value="1-E-1" />
+                            <input type="text" placeholder="Adicionar medicamento/artigo médico" value="Atenolol 50 mg Comp."/>
+                            <!-- Stock no Início do Período -->
+                            <input type="number" min="0" data-stfp="lpseudo4-c1c2-menos-lpseudo4-c3" data-stfpoutput="lpseudo4-c4" data-diferenca="lpseudo4-c6-menos-lpseudo4-c4" data-diferencaoutput="lpseudo4-c7" />
+                            <!-- Soma das Entradas -->
+                            <input type="number" min="0" data-stfp="lpseudo4-c1c2-menos-lpseudo4-c3" data-stfpoutput="lpseudo4-c4" data-diferenca="lpseudo4-c6-menos-lpseudo4-c4" data-diferencaoutput="lpseudo4-c7" />
+                            <!-- Soma das Saídas -->
+                            <input type="number" min="0" class="lpseudo4-c3" data-stfp="lpseudo4-c1c2-menos-lpseudo4-c3" data-stfpoutput="lpseudo4-c4" data-diferenca="lpseudo4-c6-menos-lpseudo4-c4" data-diferencaoutput="lpseudo4-c7" data-qtdarequisitar="lpseudo4-c3-menos-lpseudo4-c6" data-qtdarequisitaroutput="lpseudo4-c8" />
+                            <!-- Stock Teórico Fim do Período -->
+                            <input type="number" min="0" readonly class="lpseudo4-c4" />
+                            <!-- Total dos Pedidos -->
+                            <input type="number" min="0" class="celula-total-dos-pedidos" /> 
+                            <!-- Inventário do Stock -->
+                            <input type="number" min="0" class="lpseudo4-c6"  data-diferenca="lpseudo4-c6-menos-lpseudo4-c4" data-diferencaoutput="lpseudo4-c7" data-qtdarequisitar="lpseudo4-c3-menos-lpseudo4-c6" data-qtdarequisitaroutput="lpseudo4-c8" />
+                            <!-- Diferença -->
+                            <input type="number" min="0" readonly class="lpseudo4-c7"/>
+                            <!-- Quantidade a requisitar -->
+                            <input type="number" min="0" readonly class="lpseudo4-c8" />
+                            <!-- Quantidade pedida -->
+                            <input type="number" min="0" />
+                            <!-- Quantidade autorizada -->
+                            <input type="number" min="0" />
+                        </div>
                         <div class="ficha__linha-de-inputs">
                             <input type="text" placeholder="FNM" value="1-E-3"/>
                             <input type="text" placeholder="Adicionar medicamento/artigo médico" value="Propranolol 40 mg Comp."/>
@@ -506,30 +531,6 @@
                             <input type="number" min="0" readonly class="l8-c7"/>
                             <!-- Quantidade a requisitar -->
                             <input type="number" min="0" readonly class="l8-c8" />
-                            <!-- Quantidade pedida -->
-                            <input type="number" min="0" />
-                            <!-- Quantidade autorizada -->
-                            <input type="number" min="0" />
-                        </div>
-                        <div class="ficha__linha-de-inputs">
-                            <input type="text" placeholder="FNM" value="1-H-1" />
-                            <input type="text" placeholder="Adicionar medicamento/artigo médico" value="Enalapril 5 mg Comp."/>
-                            <!-- Stock no Início do Período -->
-                            <input type="number" min="0" data-stfp="l9-c1c2-menos-l9-c3" data-stfpoutput="l9-c4" data-diferenca="l9-c6-menos-l9-c4" data-diferencaoutput="l9-c7" />
-                            <!-- Soma das Entradas -->
-                            <input type="number" min="0" data-stfp="l9-c1c2-menos-l9-c3" data-stfpoutput="l9-c4" data-diferenca="l9-c6-menos-l9-c4" data-diferencaoutput="l9-c7" />
-                            <!-- Soma das Saídas -->
-                            <input type="number" min="0" class="l9-c3" data-stfp="l9-c1c2-menos-l9-c3" data-stfpoutput="l9-c4" data-diferenca="l9-c6-menos-l9-c4" data-diferencaoutput="l9-c7" data-qtdarequisitar="l9-c3-menos-l9-c6" data-qtdarequisitaroutput="l9-c8" />
-                            <!-- Stock Teórico Fim do Período -->
-                            <input type="number" min="0" readonly class="l9-c4" />
-                            <!-- Total dos Pedidos -->
-                            <input type="number" min="0" class="celula-total-dos-pedidos" /> 
-                            <!-- Inventário do Stock -->
-                            <input type="number" min="0" class="l9-c6"  data-diferenca="l9-c6-menos-l9-c4" data-diferencaoutput="l9-c7" data-qtdarequisitar="l9-c3-menos-l9-c6" data-qtdarequisitaroutput="l9-c8" />
-                            <!-- Diferença -->
-                            <input type="number" min="0" readonly class="l9-c7"/>
-                            <!-- Quantidade a requisitar -->
-                            <input type="number" min="0" readonly class="l9-c8" />
                             <!-- Quantidade pedida -->
                             <input type="number" min="0" />
                             <!-- Quantidade autorizada -->
@@ -7371,7 +7372,7 @@
                     <p class="dialog-box-esvaziar-ficha__p dialog-box-esvaziar-ficha__p--alerta">Esta acção não pode ser desfeita.</p>
                 </div>
                 <h4 class="dialog-box-esvaziar-ficha__titulo dialog-box-esvaziar-ficha__titulo--no-margin-b --fw-700">Inclusive os campos de:</h4>
-                <p class="dialog-box-esvaziar-ficha__p dialog-box-esvaziar-ficha__p--fs-small">Desmarque os que não deseja esvaziar.</p>
+                <p class="dialog-box-esvaziar-ficha__p dialog-box-esvaziar-ficha__p-tooltip"><span class="--hide-on-mobile">Clique</span><span class="--hide-on-desktop">Toque</span> para desmarcar os que não deseja esvaziar. <span class="artigo-ajuda__p-tooltip__arrow"></span></p>
                 <ul class=dialog-box-esvaziar-ficha__ul-dados-adicionais>
                     <li>
                         <input type=checkbox checked id="checkbox-lista-med" data-for=lista-de-med>
@@ -7485,6 +7486,7 @@
             </article>
             <article class="artigo artigo--ajuda layout-row layout-row--no-padding">
                 <h2 class="artigo__titulo artigo__titulo--nivel-1 artigo__titulo--ajuda-e-procedimentos">Ajuda e Procedimentos</h2>
+                <p class="artigo-ajuda__p--smaller artigo-ajuda__p-tooltip"><span class="--hide-on-mobile">Clique</span><span class="--hide-on-desktop">Toque</span> num título para ler o conteúdo relacionado. <span class="artigo-ajuda__p-tooltip__arrow"></span></p>
                 <details class="artigo__details">
                     <summary class="details__summary">Realçar totais</summary>
                     <p>Adiciona cor de fundo amarela às células de <b>Stock Teórico Fim do Período, Diferença e Quantidade a Requisitar</b>. Essas têm o acesso interdito e a funcionalidade de realçá-las, permite distinguí-las facilmente das outras células. Muito útil em celulares.</p>
@@ -7545,7 +7547,7 @@
                     <summary class="details__summary">Algumas células ficaram vermelhas</summary>
                     <p>Uma célula adopta um fundo vermelho como sinal de alerta para indicar que o valor contido nela, excedeu a largura fixa da célula e, por isso, os últimos algarismos estão omissos, ou seja, estão fora da área visível da célula.</p>
                 </details>
-                <p class="artigo-ajuda__p--contactar-suporte">Se os tópicos acima não cobrem as suas dúvidas, pode ainda solicitar suporte ao desenvolvedor através do endereço electrónico <a href="mailto:quinamine.aderitofelix@gmail.com?subject=Requisição%2FBalancete">quinamine.aderitofelix@gmail.com</a> ou através do <a href="https://wa.me/258846709901/?text=Olá%2C+Quinamine!+Sobre+o+*Requisição%2FBalancete*%2C+tenho+a+seguinte+dúvida%3A%20">WhatsApp</a>.</p>
+                <p class="artigo-ajuda__p--smaller">Se os tópicos acima não cobrem as suas dúvidas, pode ainda solicitar suporte ao desenvolvedor através do endereço electrónico <a href="mailto:quinamine.aderitofelix@gmail.com?subject=Requisição%2FBalancete">quinamine.aderitofelix@gmail.com</a> ou através do <a href="https://wa.me/258846709901/?text=Olá%2C+Quinamine!+Sobre+o+*Requisição%2FBalancete*%2C+tenho+a+seguinte+dúvida%3A%20">WhatsApp</a>.</p>
                 <button class="artigo__btn-x artigo__btn-x--fechar-ajuda" title="Fechar">&times;</button>
             </article>
         </section>
@@ -7554,6 +7556,7 @@
                 <nav class=footer__nav>
                     <h4 class="footer__nav__title">Hiperligações para outros serviços afins</h4>
                     <ul>
+                        <li><a href=https://quinamine.github.io/totalizador-de-resumo-mensal-de-nutricao/index.html class="footer__nav__link">Totalizador de Resumo Mensal de Nutrição</a></li>
                         <li><a href=https://quinamine.github.io/totalizador-de-resumo-mensal-de-its/index.html class="footer__nav__link">Totalizador de Resumo Mensal de ITS</a></li>
                         <li><a href=https://quinamine.github.io/totalizador-de-resumo-mensal-de-doenca-avancada-por-hiv/index.html class="footer__nav__link">Totalizador de Resumo Mensal de Doença Avançada por HIV</a></li>
                         <li><a href=https://quinamine.github.io/totalizador-de-resumo-mensal-de-prep/index.html class="footer__nav__link">Totalizador de Resumo Mensal de PrEP</a></li>
@@ -7574,7 +7577,7 @@
                         <li><a href=https://quinamine.github.io/totalizador-de-resumo-mensal-de-ats/index.html class="footer__nav__link">Totalizador de Resumo Mensal de ATS</a></li>
                         <li><a href=https://quinamine.github.io/requisicao-balancete/index.html class="footer__nav__link">Totalizador de Requisição/Balancete</a></li>
                         <li><a href=https://quinamine.github.io/totalizador-de-resumo-mensal-de-prn-i/index.html class="footer__nav__link">Totalizador de Resumo Mensal de PRN I</a></li>
-                        <li><a href=https://quinamine.github.io/totalizador-de-resumo-mensal-de-prn-ii/index.html class="footer__nav__link">Totalizador de Resumo Mensal de PRN II</a></li>
+                        <li><a href=https://quinamine.github.io/totalizador-de-resumo-mensal-de-nutricao/index.html class="footer__nav__link">Totalizador de Resumo Mensal de Nutrição</a></li>
                         <li><a href=https://quinamine.github.io/totalizador-de-resumo-mensal-de-malaria/index.html class="footer__nav__link">Totalizador de Resumo Mensal de Malária</a></li>
                         <li><a href=https://quinamine.github.io/totalizador-de-resumo-mensal-de-ccd/index.html class="footer__nav__link">Totalizador de Resumo Mensal de CCD</a></li>
                         <li><a href=https://quinamine.github.io/totalizador-de-resumo-mensal-de-saaj/index.html class="footer__nav__link">Totalizador de Resumo Mensal de SAAJ</a></li>
