--- a/index.html
+++ b/index.html
@@ -3,20 +3,20 @@
     <head>
         <meta charset=UTF-8>
         <meta content="IE=edge" http-equiv=X-UA-Compatible>
-        <meta content="width=device-width,initial-scale=1" name=viewport>
+        <meta content="width=device-width,initial-scale=1" name="viewport">
         <title>Totalizador de Requisição/Balancete</title>
-        <meta content="index, follow" name=robots>
+        <meta content="index, follow" name="robots">
         <meta content="Calcula automaticamente o Stock Teórico Fim do Período, Diferença entre stock teórico e stock físico e Quantidade a Requisitar com base nos dados de controlo da ficha de stock e inventário preenchidos pelo usuário. Foi desenvolvido de acordo com o modelo da ficha de requisição/balancete actualmente vigente no Serviço Nacional de Saúde em Moçambique." name=description>
-        <meta content="Totalizador de Requisição/Balancete, Balancete, Requisição de Medicamentos e Artigos Médicos, Stock no Início de Período, Soma das Entradas, Soma das Saídas, Soma Teórico Fim do Período, Total dos Pedidos, Inventário do Stock, Diferença, Quantidade a Requisitar." name=keywords>
-        <meta content="Adérito Félix Quinamine" name=author>
-        <meta content=https://quinamine.github.io/requisicao-balancete/index.html property=og:url>
-        <meta content="Totalizador de Requisição/Balancete" property=og:title>
-        <meta content="Calcula automaticamente o Stock Teórico Fim do Período, Diferença entre stock teórico e stock físico e Quantidade a Requisitar com base nos dados de controlo da ficha de stock e inventário preenchidos pelo usuário. Foi desenvolvido de acordo com o modelo da ficha de requisição/balancete actualmente vigente no Serviço Nacional de Saúde em Moçambique." property=og:description>
-        <meta content=https://quinamine.github.io/requisicao-balancete/imagens/requisicao-balancete.png property=og:image>
-        <link href=favicon.ico rel="shortcut icon" type=image/x-icon>
-        <link href=anatomia/reset.css rel=stylesheet>
-        <link href=anatomia/layout.css rel=stylesheet>
-        <link href=anatomia/ficha.css rel=stylesheet>
+        <meta content="Totalizador de Requisição/Balancete, Balancete, Requisição de Medicamentos e Artigos Médicos, Stock no Início de Período, Soma das Entradas, Soma das Saídas, Soma Teórico Fim do Período, Total dos Pedidos, Inventário do Stock, Diferença, Quantidade a Requisitar." name="keywords">
+        <meta content="Adérito Félix Quinamine" name="author">
+        <meta content="https://quinamine.github.io/requisicao-balancete/index.html" property="og:url">
+        <meta content="Totalizador de Requisição/Balancete" property="og:title">
+        <meta content="Calcula automaticamente o Stock Teórico Fim do Período, Diferença entre stock teórico e stock físico e Quantidade a Requisitar com base nos dados de controlo da ficha de stock e inventário preenchidos pelo usuário. Foi desenvolvido de acordo com o modelo da ficha de requisição/balancete actualmente vigente no Serviço Nacional de Saúde em Moçambique." property="og:description">
+        <meta content="https://quinamine.github.io/requisicao-balancete/imagens/requisicao-balancete.png" property="og:image">
+        <link href="favicon.ico" rel="shortcut icon" type="image/x-icon">
+        <link href="anatomia/reset.css" rel="stylesheet">
+        <link href="anatomia/layout.css" rel="stylesheet">
+        <link href="anatomia/ficha.css" rel="stylesheet">
         <script src="fisiologia/menu.js"></script>
         <script src="fisiologia/main.js"></script>
         <script src="fisiologia/multifuncoes.js"></script>
